# serde_valid

./: Cargo.toml  LICENSE  serde_valid.code-workspace
.github/workflows/: CI.yml  Publish.yml
crates/serde_valid/: Cargo.toml  README.md
crates/serde_valid/src/: error.rs  lib.rs  validation.rs
crates/serde_valid/src/features/fluent/: localize.rs  try_localize.rs
crates/serde_valid/src/validation/: array.rs  composited.rs  error.rs  generic.rs
crates/serde_valid/src/validation/generic/: enum.rs  enumerate.rs
crates/serde_valid/src/validation/numeric/: exclusive_maximum.rs  exclusive_minimum.rs  maximum.rs  minimum.rs  multiple_of.rs
crates/serde_valid/tests/: complex_test.rs  custom_test.rs  enum_test.rs  enumerate_test.rs  hashmap_test.rs  issues_test.rs  range_test.rs
crates/serde_valid_derive/: Cargo.toml
crates/serde_valid_derive/src/: attribute.rs  error.rs  lib.rs  warning.rs
crates/serde_valid_derive/src/attribute/common/: lit.rs  message_format.rs
crates/serde_valid_derive/src/attribute/field_validate/: generic.rs  meta.rs
crates/serde_valid_derive/src/attribute/struct_validate/: meta.rs
crates/serde_valid_derive/src/attribute/variant_validate/: meta.rs
crates/serde_valid_derive/src/derive/: enum_derive.rs  named_struct_derive.rs  unnamed_struct_derive.rs
crates/serde_valid_derive/src/serde/: rename.rs
crates/serde_valid_derive/src/types/: single_ident_path.rs
crates/serde_valid_literal/: Cargo.toml
crates/serde_valid_literal/src/: number.rs
docs/: book.toml
docs/src/: Overview.md
(+13 files in other folders)
